fixed blog overflow scroll

--- a/blog.css
+++ b/blog.css
@@ -109,8 +109,9 @@ section {
   flex-wrap: wrap;
   align-self: center;
   width: 70%;
-  max-height: 500px;
+  max-height: 90vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   margin-bottom: 10%;
   align-items: center;
   justify-content: center;
@@ -119,7 +120,7 @@ section {
   }
 
 .blogimg {
-  max-width: 400px;
+  max-width: 60vw;
   max-height: auto;
   -moz-box-shadow: 0 0 5px #888;
   -webkit-box-shadow: 0 0 5px#888;
@@ -201,7 +202,6 @@ color:#9435C9;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    -webkit-overflow-scrolling: touch;
   }
 
 
@@ -262,7 +262,8 @@ color:#9435C9;
       align-self: center;
       width: 70%;
       height: 50%;
-      overflow: scroll;
+      overflow-y: scroll;
+      overflow-x: hidden;
       margin-bottom: 10%;
       border: 10px solid white; 
       outline: 10px solid #f5f5f5;
